--- a/page1.html
+++ b/page1.html
@@ -11,9 +11,8 @@
 <body>
     <h1>Galería de la Tecnología</h1>
     <img src="img1.jpg" alt="Imagen de la NASA" class="image"/>
-    <h2>Lorem descripción</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur minus quia fugiat quae cumque consequatur
-        <a href="page2.html">suscipit quidem?</a> Cupiditate, quos debitis recusandae sequi, fugit quis nihil omnis atque inventore consequatur
+    <h2>Tecnología</h2>
+    <p>La tecnología en el 2024<a href="page2.html">suscipit quidem?</a> Cupiditate, quos debitis recusandae sequi, fugit quis nihil omnis atque inventore consequatur
         soluta?</p>
     <a href="page2.html" title="Imagen siguiente" class="link-button">Siguiente imagen =&gt;</a>
 </body>
